internal/translator/testdata/tcpproxy_delegate/input.yaml
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: tcpproxy-test
spec:
  virtualhost:
    fqdn: "tcpproxy-test.domain.com"
    tls:
      secretName: "secret"
  tcpproxy:
    delegate:
      name: delegate
      namespace: default
